# axum_admin

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: error.rs
crates/libs/lib-auth/src/pwd/scheme/: scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-base/: Cargo.toml
crates/libs/lib-base/src/: lib.rs  time.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs  modql_utils.rs  order_by.rs  project.rs  task.rs  user.rs
crates/libs/lib-core/src/model/entity/: mod.rs  prelude.rs  projects.rs  tasks.rs  users.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-core/src/pwd/: mod.rs
crates/libs/lib-core/src/pwd/scheme/: mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: params.rs  resources.rs
crates/libs/lib-rpc/src/router/: into_params.rs  mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
crates/libs/lib-rpc/src/rpcs/: project_rpc.rs  task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: time.rs
crates/libs/migration/: Cargo.toml
crates/libs/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231025_080739_create_tasks_table.rs  m20231113_111449_init_users_table_data.rs  m20231114_145659_create_project_table.rs  m20231114_151310_create_tasks_foreign_key.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/services/web-server/src/web/rpc/: infra.rs  mod.rs  params.rs  project_rpc.rs  router.rs  state.rs  task_rpc.rs
crates/tools/gen-key/: Cargo.toml
examples/: quick_dev.rs
migration/src/: m20220101_000001_create_table.rs
scripts/: init_db.sh
src/: config.rs  error.rs  main.rs
src/config/: error.rs  mod.rs
src/log/: mod.rs
src/model/: error.rs  mod.rs  user.rs
src/model/entity/: users.rs
src/model/store/: mod.rs
src/pwd/: hmac_hasher.rs  mod.rs
src/token/: mod.rs
src/utils/: mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs
src/web/rpc/: mod.rs  params.rs  task_rpc.rs
