[workspace]
resolver = "2"
members = [
    # -- Tools
    "crates/tools/gen-key",

    "crates/libs/migration",
    # -- Application Libraries
    "crates/libs/lib-base",
    # "crates/libs/core", # e.g., model, ctx, config, pwd, token.
    "crates/libs/lib-core",
    # "creates/libs/lib-sea-orm-tools"
    # "crates/libs/lib-sea-orm-tools",
    # -- Application Services
    "crates/services/web-server",
]
