[workspace.lints.rust]
unsafe_code = "forbid"


[workspace]
resolver = "2"
members = [
    # -- Tools
    "crates/tools/gen-key",

    # -- Application Libraries
    "crates/libs/migration",
    "crates/libs/lib-base",
    "crates/libs/lib-core",  # e.g., model, ctx, config.
    "crates/libs/lib-rpc",   # e.g., rpc routing.
    "crates/libs/lib-auth",  # e.g., for pwd, token.

    # -- Application Services
    "crates/services/web-server",
]
