[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- App Libs
lib-base = { path = "../../libs/lib-base" }
lib-auth = { path = "../../libs/lib-auth" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
# -- Web
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.9"
# -- sea-orm
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
] }
sea-query = { version = "0.30", optional = true }
modql = { version = "0.3.4", features = ["with-sea-query"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Other
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
strum_macros = "0.25"
lazy-regex = "3"
enum_dispatch = "0.3"
chrono = "0.4"
derive_more = { version = "1.0.0-beta", features = ["from"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
