[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
chrono = "0.4"
