[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- App Libs
lib-base = { path = "../../libs/lib-base" }
lib-core = { path = "../../libs/lib-core" }
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- sea-orm
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Hashing (pwd scheme-01 &token)
hmac = "0.12"
sha2 = "0.10"
# -- Others
base64 = "0.21"
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.25"
time = "0.3"
rand = "0.8"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
